zindex issue fixed with javascript

--- a/css/main_style.css
+++ b/css/main_style.css
@@ -517,14 +517,14 @@ nav {
       color: #F0EFEF; } }
 
 .sidenav {
+  position: fixed;
   height: 100%;
   width: 0;
-  position: fixed;
-  z-index: 10;
   top: 0;
   left: 0;
   background-color: #000;
   overflow-x: hidden;
+  overflow-y: hidden;
   transition: 0.5s;
   padding-top: 60px; }
   .sidenav a {
@@ -547,7 +547,7 @@ nav {
     margin-left: 50px; }
 
 .row [class^="col"] {
-  background-color: orange; }
+  background-color: #FF9800; }
   .row [class^="col"] p {
     padding: 10px;
     line-height: 1.85em;
@@ -609,6 +609,7 @@ canvas {
   clear: both; }
 
 .tools {
+  position: relative;
   font-family: "Orange_Juice";
   cursor: pointer;
   width: 100%;
@@ -675,7 +676,6 @@ input[type="search"] {
 .overlay {
   position: fixed;
   background: rgba(0, 0, 0, 0.8);
-  z-index: 100;
   top: 0;
   left: 0;
   width: 100%;
